--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,6 +64,8 @@ file.reference.flatlaf-intellij-themes-3.5.2.jar-1=..\\..\\PTUD\\lib\\flatlaf-in
 file.reference.Gradianto-5.5.jar=dist\\lib\\Gradianto-5.5.jar
 file.reference.itextpdf-5.5.13.3.jar=D:\\NetBeansProjects\\omega-book-2\\resources\\lib\\itextpdf-5.5.13.3.jar
 file.reference.itextpdf-5.5.13.3.jar-3=dist\\lib\\itextpdf-5.5.13.3.jar
+file.reference.javax.activation-1.2.0.jar=dist\\lib\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=dist\\lib\\javax.mail.jar
 file.reference.jcalendar-1.2.2.jar=D:\\NetBeansProjects\\omega-book-2\\resources\\lib\\jcalendar-1.2.2.jar
 =======
 file.reference.AbsoluteLayout.jar=..\\lib\\AbsoluteLayout.jar
@@ -315,7 +317,9 @@ javac.classpath=\
     ${file.reference.swing-toast-notifications-1.0.1.jar-3}:\
     ${file.reference.xchart-3.8.5.jar-3}:\
     ${file.reference.xmlbeans-5.1.1.jar-3}:\
-    ${file.reference.flatlaf-intellij-themes-3.5.2.jar-1}
+    ${file.reference.flatlaf-intellij-themes-3.5.2.jar-1}:\
+    ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.javax.mail.jar}
     ${file.reference.poi-5.2.3.jar}:\
     ${file.reference.poi-examples-5.2.3.jar}:\
     ${file.reference.poi-excelant-5.2.3.jar}:\
